package com.backend.backend;
@org.springframework.boot.autoconfigure.SpringBootApplication
public class BackendApplication {
    public static void main(java.lang.String[] args) {
        org.springframework.boot.SpringApplication.run(com.backend.backend.BackendApplication.class, args);
    }
}
