package com.backend.backend.controller.controller_request_object;
public class GetProductRequest {
    private java.lang.Long id;

    private java.lang.Long userId;

    // Getters et setters
    /**
     *
     * @return Long return the id
     */
    public java.lang.Long getId() {
        return id;
    }

    /**
     *
     * @param id
     * 		the id to set
     */
    public void setId(java.lang.Long id) {
        this.id = id;
    }

    /**
     *
     * @return Long return the userId
     */
    public java.lang.Long getUserId() {
        return userId;
    }

    /**
     *
     * @param userId
     * 		the userId to set
     */
    public void setUserId(java.lang.Long userId) {
        this.userId = userId;
    }
}
