package com.backend.backend.controller.controller_request_object;
public class GetAllProductsRequest {
    long userId;

    public long getUserId() {
        return userId;
    }

    public void setUserId(long userId) {
        this.userId = userId;
    }
}
