' Generated by UML Generator
' Encoded: tLZVJzim47xFN-77Tb1h3tkg6AByq8G46ohgqpGXDt63mOsDxR1r2FvsxCH9dCG9XGARUA74T_xEzzsTxVEUL4YeT4a3UKqIZWHQWf0YAITA2J9F5JuEMN9E_cBmERWa4GOX4I75GP1fWPd4uXoBMn9YS1S0CBhJW8g4zu2oECPY39Y88U8elCJG394aDhzVhk19fW2-zcgSeWHfBHXZbUiF78imMyFGc4trg9nYpYHHJAp686HBE4VXDKwYybUKSZYhwnk8aVwpXQB8Y0Qf7m4dYYY2PJP_k8PES5ymTIPOb8RgVScg6tNuuhdW6OoTDMUKd6bp4qgjN0vCA8wZiVOfYJL5L-WMmLGH2a-8L3kzZ5cCNOjgF_TNnz60MCHjq8d_Wol24aJNjn5XYXLUoymj8v6Pal88bLCSzGGjiLqCHJeevxfyp3WNcdXNSCZIESNR0F_XM22puaCDQ3Na3ONcizEypi_2zXjRhEQVw85M7X-mH0b6gKxAEoUXRARviqdQDAndPLSU2NoJOgdyK65ftldtmawvOFCh72huhGOupON3lCeaDsmjz7w7VpDn3I-Lud2A9MU9n4ScMLOxBqbTN-w-YYTb_JtNYmsgOVE57xgOrThzrRIvkPcBrpRdLC_RsYghnQUK5upPEXerfaVzHPqNcBUiZSXRs8tfHNMtJHQrf-CzzCYtP2PgBzVXLS_-hXTUdr_QDWYPsEzS7UVCk5a7AXqrGBcyWumwr2npkTCfA_OJKqSwgX7SusP3yQd0jDB5LovzwVBMKNqD2aldMflOH_AiVT1atZsufwgx-ie-xRHAVROcvHvMO_4VRXmVjFJltHwdUTr9gowa_wxZj2ilRJ9UvQ0tMBkLJ_kvVC8v9M6M0PbVMsL7iaGa6I0HotRKVlvgKMGpydrEjkBA-g4FhuuZn_5ztVEccEBDwvT53Elie1t1rCWwGoE_LBUdOq0IzV-5xiYur7UoP_8EnnjPO2deGIjLkkboC1NBXxe0JUCKPopar1eBPg1WknNv0oQatj4M9CwhNcz8PkWKSQuXJUiLwuR7F0gOuQdzSc0qA1OB56BGUXR8Zxq5qPiBhGXz_WD01b7hoJThzX_UftElmlPGwwS6ja5-Oiktsbwg6szM5T7xg_uqN-kLodt9-pGQDQtLv13kPlAWyQXbvhNVYTel1evUSJQsbOmHxyMgMxT-CUhGyzsnErHztLlGk0uKN1MEDCHDgfpu6P4T3PgnBQVjwM2bI_e8
' URL: http://www.plantuml.com/plantuml/uml/tLZVJzim47xFN-77Tb1h3tkg6AByq8G46ohgqpGXDt63mOsDxR1r2FvsxCH9dCG9XGARUA74T_xEzzsTxVEUL4YeT4a3UKqIZWHQWf0YAITA2J9F5JuEMN9E_cBmERWa4GOX4I75GP1fWPd4uXoBMn9YS1S0CBhJW8g4zu2oECPY39Y88U8elCJG394aDhzVhk19fW2-zcgSeWHfBHXZbUiF78imMyFGc4trg9nYpYHHJAp686HBE4VXDKwYybUKSZYhwnk8aVwpXQB8Y0Qf7m4dYYY2PJP_k8PES5ymTIPOb8RgVScg6tNuuhdW6OoTDMUKd6bp4qgjN0vCA8wZiVOfYJL5L-WMmLGH2a-8L3kzZ5cCNOjgF_TNnz60MCHjq8d_Wol24aJNjn5XYXLUoymj8v6Pal88bLCSzGGjiLqCHJeevxfyp3WNcdXNSCZIESNR0F_XM22puaCDQ3Na3ONcizEypi_2zXjRhEQVw85M7X-mH0b6gKxAEoUXRARviqdQDAndPLSU2NoJOgdyK65ftldtmawvOFCh72huhGOupON3lCeaDsmjz7w7VpDn3I-Lud2A9MU9n4ScMLOxBqbTN-w-YYTb_JtNYmsgOVE57xgOrThzrRIvkPcBrpRdLC_RsYghnQUK5upPEXerfaVzHPqNcBUiZSXRs8tfHNMtJHQrf-CzzCYtP2PgBzVXLS_-hXTUdr_QDWYPsEzS7UVCk5a7AXqrGBcyWumwr2npkTCfA_OJKqSwgX7SusP3yQd0jDB5LovzwVBMKNqD2aldMflOH_AiVT1atZsufwgx-ie-xRHAVROcvHvMO_4VRXmVjFJltHwdUTr9gowa_wxZj2ilRJ9UvQ0tMBkLJ_kvVC8v9M6M0PbVMsL7iaGa6I0HotRKVlvgKMGpydrEjkBA-g4FhuuZn_5ztVEccEBDwvT53Elie1t1rCWwGoE_LBUdOq0IzV-5xiYur7UoP_8EnnjPO2deGIjLkkboC1NBXxe0JUCKPopar1eBPg1WknNv0oQatj4M9CwhNcz8PkWKSQuXJUiLwuR7F0gOuQdzSc0qA1OB56BGUXR8Zxq5qPiBhGXz_WD01b7hoJThzX_UftElmlPGwwS6ja5-Oiktsbwg6szM5T7xg_uqN-kLodt9-pGQDQtLv13kPlAWyQXbvhNVYTel1evUSJQsbOmHxyMgMxT-CUhGyzsnErHztLlGk0uKN1MEDCHDgfpu6P4T3PgnBQVjwM2bI_e8
' Generated on: 2025-12-15T09:26:46.797287358

@startuml
skinparam classAttributeIconSize 0
hide circle

class UserService {
  -{static} logger: org.apache.logging.log4j.Logger = org.apache.logging.log4j.LogManager.getLogger(UserService.class)
  -usersRepository: com.backend.backend.repository.UsersRepository
  --
  +addUser(u: com.backend.backend.entities.User): com.backend.backend.entities.User
}

class ProductService {
  -{static} logger: org.apache.logging.log4j.Logger = org.apache.logging.log4j.LogManager.getLogger(ProductService.class)
  -productRepository: com.backend.backend.repository.ProductRepository
  --
  +getAllProducts(userId: long): java.util.List<com.backend.backend.entities.Product>
  +getProductById(id: long, userId: long): java.util.Optional<com.backend.backend.entities.Product>
  +deleteProductById(id: long, userId: long): void
  +updateProduct(id: long, name: java.lang.String, price: java.lang.Double, experationDate: java.sql.Date, userId: long): void
  +addProduct(name: java.lang.String, price: java.lang.Double, experationDate: java.sql.Date, userId: long): java.lang.Long
}

class ProductController {
  -productService: com.backend.backend.service.ProductService
  --
  +getAllProducts(request: com.backend.backend.controller.controller_request_object.GetAllProductsRequest): org.springframework.http.ResponseEntity<java.util.List<com.backend.backend.entities.Product>>
  +getProductById(request: com.backend.backend.controller.controller_request_object.GetProductRequest): org.springframework.http.ResponseEntity<com.backend.backend.entities.Product>
  +deleteProductById(request: com.backend.backend.controller.controller_request_object.DeleteProductRequest): void
  +updateProduct(request: com.backend.backend.controller.controller_request_object.UpdateProductRequest): void
  +addProduct(request: com.backend.backend.controller.controller_request_object.UpdateProductRequest): void
}

class UpdateProductRequest {
  -id: java.lang.Long
  -name: java.lang.String
  -price: java.lang.Double
  -experationDate: java.lang.String
  -userId: java.lang.Long
  --
  +getId(): java.lang.Long
  +setId(id: java.lang.Long): void
  +getName(): java.lang.String
  +setName(name: java.lang.String): void
  +getPrice(): java.lang.Double
  +setPrice(price: java.lang.Double): void
  +getUserId(): java.lang.Long
  +setUserId(userId: java.lang.Long): void
  +getExperationDate(): java.lang.String
  +setExperationDate(experationDate: java.lang.String): void
}

class DeleteProductRequest {
  -id: java.lang.Long
  -userId: java.lang.Long
  --
  +getId(): java.lang.Long
  +setId(id: java.lang.Long): void
  +getUserId(): java.lang.Long
  +setUserId(userId: java.lang.Long): void
}

class GetProductRequest {
  -id: java.lang.Long
  -userId: java.lang.Long
  --
  +getId(): java.lang.Long
  +setId(id: java.lang.Long): void
  +getUserId(): java.lang.Long
  +setUserId(userId: java.lang.Long): void
}

class GetAllProductsRequest {
  ~userId: long
  --
  +getUserId(): long
  +setUserId(userId: long): void
}

class AddProductRequest {
  -name: java.lang.String
  -price: java.lang.Double
  -experationDate: java.lang.String
  -userId: java.lang.Long
  --
  +getName(): java.lang.String
  +setName(name: java.lang.String): void
  +getPrice(): java.lang.Double
  +setPrice(price: java.lang.Double): void
  +getUserId(): java.lang.Long
  +setUserId(userId: java.lang.Long): void
}

class UserController {
  -userService: com.backend.backend.service.UserService
  --
  +addUser(u: com.backend.backend.entities.User): org.springframework.http.ResponseEntity<com.backend.backend.entities.User>
}

class BackendApplication {
  +{static} main(args: java.lang.String[]): void
}

class Product {
  -id: java.lang.Long
  -name: java.lang.String
  -price: java.lang.Double
  -experationDate: java.sql.Date
  --
  +getId(): java.lang.Long
  +setId(id: java.lang.Long): void
  +getName(): java.lang.String
  +setName(name: java.lang.String): void
  +getPrice(): java.lang.Double
  +setPrice(price: java.lang.Double): void
  +getExperationDate(): java.sql.Date
  +setExperationDate(experationDate: java.sql.Date): void
}

class User {
  -id: java.lang.Long
  -name: java.lang.String
  -email: java.lang.String
  -password: java.lang.String
  -age: int
  --
  +getId(): java.lang.Long
  +setId(id: java.lang.Long): void
  +getName(): java.lang.String
  +setName(name: java.lang.String): void
  +getEmail(): java.lang.String
  +setEmail(email: java.lang.String): void
  +getPassword(): java.lang.String
  +setPassword(password: java.lang.String): void
  +toString(): java.lang.String
  +getAge(): int
  +setAge(age: int): void
}

class CorsConfig {
  +addCorsMappings(registry: CorsRegistry): void
}

interface ProductRepository {
  ~findAll(): java.util.List<com.backend.backend.entities.Product>
  ~findById(id: long): java.util.Optional<com.backend.backend.entities.Product>
  ~updateProduct(id: long, name: java.lang.String, price: java.lang.Double, experationDate: java.sql.Date): void
  ~deleteProduct(product: com.backend.backend.entities.Product): void
}

interface UsersRepository {
  ~findByName(name: java.lang.String): com.backend.backend.entities.User
}

UserService *-- UsersRepository
UserService ..> User
ProductService *-- ProductRepository
ProductController *-- ProductService
ProductController ..> GetAllProductsRequest
ProductController ..> GetProductRequest
ProductController ..> DeleteProductRequest
ProductController ..> UpdateProductRequest
UserController *-- UserService
UserController ..> User
ProductRepository ..> Product
UsersRepository ..> User
@enduml